# cmake-dll-dirs

./: CMakeLists.txt  README.md
app/: main.cpp
src/: CMakeLists.txt  adder.cpp
